# anderson

./: CMakeLists.txt
include/: CMakeLists.txt
include/anderson/: CMakeLists.txt  dual_history.h  helper_macros.h  uv_solver.h
ref/: anderson.cpp  anderson.h  anderson_host.cpp  anderson_host.h  dual_history_detail.cpp  uv_solver_detail.cpp
src/: CMakeLists.txt
test/: CMakeLists.txt  anderson_test.cpp
